--- a/Content/css/translator.css
+++ b/Content/css/translator.css
@@ -1,6 +1,338 @@
-﻿* {
-
+﻿/* Buttons */
+.button-primary {
+    padding: 0.5rem 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-color) !important;
+    border: none;
+    border-radius: 5px;
+    color: #ffffff !important;
+    transition: 0.3s ease-out;
 }
+
+.button-primary h3 {
+    margin-left: 0.5rem !important;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.button-primary:hover {
+    background-color: var(--primary-color-hover) !important;
+}
+
+.button-primary:active {
+    background-color: var(--primary-color-active) !important;
+}
+
+.button-secondary {
+    padding: 0.4rem 0.9rem;
+    background-color: transparent;
+    border: 2px solid var(--primary-color);
+    border-radius: 5px;
+    color: var(--primary-color);
+    transition: 0.3s ease-out;
+}
+
+.button-secondary:hover {
+    border: 2px solid var(--primary-color-hover);
+    color: var(--primary-color-hover);
+}
+
+.button-secondary:active {
+    border: 2px solid var(--primary-color-active);
+    color: var(--primary-color-active);
+}
+
+.button-small {
+    padding: 0.6rem 0.6rem !important;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    border: 2px solid var(--primary-color);
+    border-radius: 5px;
+    color: var(--primary-color);
+    transition: 0.3s ease-out;
+}
+
+.button-small:hover {
+    border: 2px solid var(--primary-color-hover);
+    color: var(--primary-color-hover);
+}
+
+.button-small:active {
+    border: 2px solid var(--primary-color-active);
+    color: var(--primary-color-active);
+}
+
+
+
+/* Tooltip */
+.tool-tip {
+    padding: 0 0.5rem;
+    position: absolute;
+    visibility: hidden;
+    background-color: var(--primary-color-hover);
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+    color: #ffffff;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 1rem;
+    text-align: center;
+    z-index: 1;
+}
+
+#tooltipSavedTranslations, #tooltipTranslationHistory, #tooltipReport {
+    margin-top: 5rem;
+}
+
+#tooltipSave {
+    margin-left: 1rem;
+    white-space: nowrap;
+}
+
+/* Notification restyling */
+.notification {
+    top: 65%;
+    right: 3%;
+    z-index: 101;
+}
+
+
+
+/* Modals */
+.modal-window {
+    display: none;
+    position: fixed;
+    align-items: center;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-dialog {
+    width: 50%;
+    padding: 2rem 5rem 1rem 5rem;
+    background-color: white;
+    border-radius: 5px;
+    overflow-y: initial;
+    animation: slideIn .3s ease-out forwards;
+}
+
+.modal-content {
+    width: 100%;
+    height: 100%;
+}
+
+.modal-header {
+    display: flex;
+    padding-bottom: 0.5rem;
+    flex-direction: row;
+    align-items: center;
+    color: var(--primary-color);
+}
+
+.modal-icon {
+    flex: 0.07;
+    font-size: 24px;
+}
+
+.modal-title {
+    flex: 0.88;
+    text-align: left;
+}
+
+.modal-btn-close {
+    flex: 0.05;
+    background-color: white;
+    border: none;
+    color: #323232;
+    font-size: 28px;
+    transition: ease-out 0.1s;
+}
+
+.modal-btn-close:hover {
+    color: #828282;
+}
+
+.modal-btn-close:active {
+    color: #b2b2b2;
+}
+
+.modal-body {
+    height: 60vh;
+    padding-top: 1rem;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    overflow-y: auto;
+}
+
+.modal-title {
+    color: var(--primary-color);
+    font-size: 26px;
+    font-family: 'Mitr', Arial, sans-serif;
+    font-weight: 500;
+}
+
+.modal-empty {
+    display: flex;
+    flex-direction: row;
+    column-gap: 2rem;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    background-color: #eaeaea;
+}
+
+.modal-empty i {
+    color: #525252;
+    font-size: 40px;
+}
+
+.modal-empty h1 {
+    margin: 0;
+    color: #525252;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 30px;
+}
+
+.modal-item {
+    margin-bottom: 1rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #eaeaea;
+}
+
+.modal-item-content {
+    flex: 0.9;
+    word-break: break-word;
+}
+
+.modal-item-title {
+    color: var(--primary-color);
+    font-size: 18px;
+    font-family: 'Mitr', Arial, sans-serif;
+}
+
+.text-title {
+    margin-bottom: 0.2rem !important;
+    color: #626262;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 14px;
+}
+
+.text-content {
+    color: var(--primary-color);
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 14px;
+}
+
+.modal-item-content small {
+    color: #626262;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.modal-item-controls {
+    flex: 0.1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 2rem;
+}
+
+.modal-item-btn {
+    flex: 0.1;
+    display: flex;
+    align-self: flex-end;
+    padding: 0 0.4rem;
+    border: 2px solid var(--primary-color);
+    color: var(--primary-color);
+    background: none;
+    border-radius: 4px;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 14px;
+    transition: all 0.2s ease-out;
+}
+
+.modal-item-btn:hover {
+    border-color: var(--primary-color-hover);
+    color: var(--primary-color-hover);
+}
+
+.modal-item-btn:active {
+    border-color: var(--primary-color-active);
+    color: var(--primary-color-active);
+}
+
+.modal-inputfield {
+    display: flex;
+    flex-direction: column;
+    color: var(--primary-color);
+    font-family: 'Rubik', Arial, sans-serif;
+    font-weight: 500;
+}
+
+.modal-dropdown {
+    padding: 0.5rem 1rem;
+    width: 50%;
+    border: 2px solid var(--primary-color);
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.modal-dropdown:focus {
+    box-shadow: 0 0 0 1px var(--primary-color);
+    outline: none;
+}
+
+.modal-textinput {
+    padding: 0.5rem 1rem;
+    resize: none;
+    border: 2px solid var(--primary-color);
+    border-radius: 3px;
+}
+
+.modal-textinput:focus {
+    box-shadow: 0 0 0 1px var(--primary-color);
+}
+
+.modal-footer {
+    display: flex;
+    flex-direction: row;
+    column-gap: 2rem;
+    padding: 1rem 0;
+    color: var(--primary-color);
+    font-family: 'Rubik', Arial, sans-serif;
+    word-spacing: 0.2rem;
+}
+
+/* Report Modal */
+#dlgReport {
+    width: 40%;
+    height: 70%;
+}
+
+#divReportModalBody {
+    padding: 1rem 0.1rem;
+    display: grid;
+    grid-template-rows: 0.3fr 0.7fr;
+}
+
+#ddlReportCategory {
+    width: 60%;
+}
+
+
 
 /* Banner Section */
 .translate-content {
@@ -55,18 +387,7 @@
     margin: 0;
 }
 
-.notification {
-    display: none;
-    position: fixed;
-    top: 65%;
-    right: 3%;
-    padding: 1rem 1.5rem 0.5rem 1.5rem;
-    width: 300px;
-    background-color: var(--primary-color);
-    border-radius: 6px;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
-    transition: opacity 0.1s linear;
-}
+
 
 /* Responsive Section  */
 @media screen and (max-width: 837px) {
@@ -196,6 +517,7 @@
 }
 
 .translate-btn-save {
+    position: relative;
     color: var(--primary-color);
     font-size: 20px;
 }
@@ -330,184 +652,6 @@
     color: var(--primary-color-active);
 }
 
-/* Modals */
-.modal-window {
-    display: none;
-    position: fixed;
-    align-items: center;
-    z-index: 100;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-dialog {
-    width: 50%;
-    padding: 2rem 5rem 1rem 5rem;
-    background-color: white;
-    border-radius: 5px;
-    overflow-y: initial;
-    animation: slideIn .3s ease-out forwards;
-}
-
-.modal-header {
-    display: flex;
-    padding-bottom: 0.5rem;
-    flex-direction: row;
-    align-items: center;
-    color: var(--primary-color);
-}
-
-.modal-icon {
-    flex: 0.06;
-    font-size: 24px;
-}
-
-.modal-title {
-    flex: 0.89;
-    text-align: left;
-}
-
-.modal-btn-close {
-    flex: 0.05;
-    background-color: white;
-    border: none;
-    color: #323232;
-    font-size: 28px;
-    transition: ease-out 0.1s;
-}
-
-.modal-btn-close:hover {
-    color: #828282;
-}
-
-.modal-btn-close:active {
-    color: #b2b2b2;
-}
-
-.modal-body {
-    height: 60vh;
-    padding-top: 1rem;
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    overflow-y: auto;
-}
-
-.modal-title {
-    color: var(--primary-color);
-    font-size: 26px;
-    font-family: 'Mitr', Arial, sans-serif;
-    font-weight: 500;
-}
-
-.modal-empty {
-    display: flex;
-    flex-direction: row;
-    column-gap: 2rem;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    background-color: #eaeaea;
-}
-
-.modal-empty i {
-    color: #525252;
-    font-size: 40px;
-}
-
-.modal-empty h1 {
-    margin: 0;
-    color: #525252;
-    font-family: 'Rubik', Arial, sans-serif;
-    font-size: 30px;
-}
-
-.modal-item {
-    margin-bottom: 1rem;
-    padding: 1rem;
-    background-color: #eaeaea;
-}
-
-.modal-item h2 {
-    color: var(--primary-color);
-    font-size: 18px;
-    word-break: break-word;
-}
-
-.modal-item h3 {
-    color: var(--primary-color);
-    font-family: 'Rubik', Arial, sans-serif;
-    font-size: 14px;
-    word-break: break-word;
-}
-
-.modal-item h4 {
-    padding-top: 0.4rem;
-    color: #323232;
-    font-family: 'Rubik', Arial, sans-serif;
-    font-size: 14px;
-    word-break: break-word;
-}
-
-.modal-item-row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    column-gap: 2rem;
-}
-
-.modal-item-row small {
-    flex: 0.9;
-    color: #323232;
-    font-family: 'Rubik', Arial, sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-}
-
-.modal-item-btn {
-    flex: 0.1;
-    display: flex;
-    align-self: flex-end;
-    padding: 0 0.4rem;
-    border: 2px solid var(--primary-color);
-    color: var(--primary-color);
-    background: none;
-    border-radius: 4px;
-    font-family: 'Rubik', Arial, sans-serif;
-    transition: all 0.2s ease-out;
-}
-
-.modal-item-btn:hover {
-    border-color: var(--primary-color-hover);
-    color: var(--primary-color-hover);
-}
-
-.modal-item-btn:active {
-    border-color: var(--primary-color-active);
-    color: var(--primary-color-active);
-}
-
-.modal-footer {
-    padding: 1rem 0;
-    color: var(--primary-color);
-    font-family: 'Rubik', Arial, sans-serif;
-    word-spacing: 0.2rem;
-}
-
-@keyframes slideIn {
-    from {
-        top: -300px;
-        opacity: 0;
-    }
-
-    to {
-        top: 0;
-        opacity: 1;
-    }
-}
-
 /* Saved Translate  */
 .translate .translate-container .translate-button .translate-user .saved div#saved {
   top: 90px;
@@ -556,18 +700,18 @@
   margin-top: 20px;
 }
 
-.translate-button .translate-user .saved .modal-body .modal-item .modal-item-row {
+.translate-button .translate-user .saved .modal-body .modal-item .modal-item-controls {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.translate-button .translate-user .saved .modal-body .modal-item .modal-item-row h3 {
+.translate-button .translate-user .saved .modal-body .modal-item .modal-item-controls h3 {
   color: var(--primary-color);
   font-size: 15px;
 }
 
-.translate-button .translate-user .saved .modal-body .modal-item .modal-item-row button {
+.translate-button .translate-user .saved .modal-body .modal-item .modal-item-controls button {
   font-weight: 600;
   border: none;
   background: var(--primary-color) !important;
@@ -578,11 +722,11 @@
   transition: 0.4s;
 }
 
-.translate-button .translate-user .saved .modal-body .modal-item .modal-item-row button:hover {
+.translate-button .translate-user .saved .modal-body .modal-item .modal-item-controls button:hover {
   background: #da4343 !important;
 }
 
-.translate-button .translate-user .saved .modal-body .modal-item .modal-item-row button:focus {
+.translate-button .translate-user .saved .modal-body .modal-item .modal-item-controls button:focus {
   outline: 0;
   box-shadow: none;
   background: #e29090 !important;
@@ -634,18 +778,18 @@
   margin-top: 20px;
 }
 
-.translate-button .translate-user .history .modal-body .modal-item .modal-item-row {
+.translate-button .translate-user .history .modal-body .modal-item .modal-item-controls {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.translate-button .translate-user .history .modal-body .modal-item .modal-item-row h3 {
+.translate-button .translate-user .history .modal-body .modal-item .modal-item-controls h3 {
   color: var(--primary-color);
   font-size: 15px;
 }
 
-.translate-button .translate-user .history .modal-body .modal-item .modal-item-row button {
+.translate-button .translate-user .history .modal-body .modal-item .modal-item-controls button {
   font-weight: 600;
   border: none;
   background: var(--primary-color) !important;
@@ -656,11 +800,11 @@
   transition: 0.4s;
 }
 
-.translate-button .translate-user .history .modal-body .modal-item .modal-item-row button:hover {
+.translate-button .translate-user .history .modal-body .modal-item .modal-item-controls button:hover {
   background: #da4343 !important;
 }
 
-.translate-button .translate-user .history .modal-body .modal-item .modal-item-row button:focus {
+.translate-button .translate-user .history .modal-body .modal-item .modal-item-controls button:focus {
   outline: 0;
   box-shadow: none;
   background: #e29090 !important;
@@ -836,7 +980,7 @@
     font-size: 14px;
   }
 
-  .modal-body .modal-item .modal-item-row h3 {
+  .modal-body .modal-item .modal-item-controls h3 {
     font-size: 14px;
   }
 
@@ -857,7 +1001,7 @@
     font-size: 14px;
   }
 
-  .translate-button .translate-user .history .modal-body .modal-item .modal-item-row h3 {
+  .translate-button .translate-user .history .modal-body .modal-item .modal-item-controls h3 {
     font-size: 14px;
   }
 
@@ -869,7 +1013,7 @@
 @media screen and (max-width: 318px) {
 
   /* Translate Save  */
-  .modal-body .modal-item .modal-item-row {
+  .modal-body .modal-item .modal-item-controls {
     flex-direction: column;
     justify-content: flex-start !important;
     justify-content: left !important;
@@ -877,7 +1021,7 @@
   }
 
   /* Translate History  */
-  .translate-button .translate-user .history .modal-body .modal-item .modal-item-row {
+  .translate-button .translate-user .history .modal-body .modal-item .modal-item-controls {
     flex-direction: column;
     justify-content: flex-start !important;
     justify-content: left !important;
@@ -1025,4 +1169,19 @@
 
 .learn-more a:active {
   background: var(--primary-color-active);
+}
+
+
+
+/* Animations */
+@keyframes slideIn {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0;
+        opacity: 1;
+    }
 }
