--- a/Content/css/suggestions.css
+++ b/Content/css/suggestions.css
@@ -144,9 +144,23 @@
 /* listItemContainer */
 .listItemContainer {
     flex: 1;
+    padding-right: 10px;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+}
+
+.listItemContainer::-webkit-scrollbar {
+    width: 5px;
+    background-color: transparent;
+}
+
+.listItemContainer::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+}
+
+.listItemContainer::-webkit-scrollbar-button {
+    display: none;
 }
 
 #txtSelectedListItem {
@@ -164,6 +178,11 @@
     box-shadow: none;
     transition: all .5s ease-out;
 }
+
+.listItem-selected {
+    box-shadow: inset 0 0 0 3px var(--primary-color);
+}
+
 .noData {
     padding: 2em 0;
     flex-direction: row;
@@ -527,6 +546,7 @@
 /* Notification */
 /* Notification */
 .notification {
+    box-shadow: 0 0 10px 1px var(--theme-black);
     background-color: var(--notification-success);
     top: unset;
     bottom: 3rem;
