--- a/Content/css/translator.css
+++ b/Content/css/translator.css
@@ -121,6 +121,7 @@
     padding: 2rem 5rem 1rem 5rem;
     background-color: white;
     border-radius: 5px;
+    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.4);
     overflow-y: initial;
     animation: slideIn .3s ease-out forwards;
 }
