--- a/Content/css/translator.css
+++ b/Content/css/translator.css
@@ -121,7 +121,7 @@
     padding: 2rem 5rem 1rem 5rem;
     background-color: white;
     border-radius: 5px;
-    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.4);
     overflow-y: initial;
     animation: slideIn .3s ease-out forwards;
 }
@@ -172,6 +172,25 @@
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     overflow-y: auto;
+}
+
+.modal-body::-webkit-scrollbar {
+    width: 4px;
+    background-color: transparent;
+}
+
+.modal-body::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+}
+.modal-body::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-color-hover);
+}
+.modal-body::-webkit-scrollbar-thumb:active {
+    background-color: var(--primary-color-active);
+}
+
+.modal-body::-webkit-scrollbar-button {
+    display: none;
 }
 
 .modal-title {
