--- a/Content/css/dictionary.css
+++ b/Content/css/dictionary.css
@@ -117,7 +117,7 @@ body {
     width: 300px;
     background-color: var(--primary-color);
     border-radius: 6px;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.4) !important;
     transition: opacity 0.1s linear;
 }
 
@@ -320,6 +320,27 @@ body {
     overflow-y: auto;
 }
 
+.dictionary-container::-webkit-scrollbar {
+    width: 6px;
+    background-color: #f2f2f2;
+    border-left: 1px solid #a2a2a2;
+    border-right: 1px solid #a2a2a2;
+}
+
+.dictionary-container::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+}
+.dictionary-container::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-color-hover);
+}
+.dictionary-container::-webkit-scrollbar-thumb:active {
+    background-color: var(--primary-color-active);
+}
+
+.dictionary-container::-webkit-scrollbar-button {
+    display: none;
+}
+
 .dictionary-empty {
     display: flex;
     flex-direction: row;
@@ -411,7 +432,7 @@ body {
     padding: 2rem 5rem 1rem 5rem;
     background-color: white;
     border-radius: 5px;
-    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.4);
     overflow-y: initial;
     animation: slideIn .3s ease-out forwards;
 }
