--- a/Content/css/suggestions.css
+++ b/Content/css/suggestions.css
@@ -159,6 +159,14 @@
     background-color: var(--primary-color);
 }
 
+    .listItemContainer::-webkit-scrollbar-thumb:hover {
+        background-color: var(--primary-color-hover);
+    }
+
+    .listItemContainer::-webkit-scrollbar-thumb:active {
+        background-color: var(--primary-color-active);
+    }
+
 .listItemContainer::-webkit-scrollbar-button {
     display: none;
 }
@@ -180,7 +188,8 @@
 }
 
 .listItem-selected {
-    box-shadow: inset 0 0 0 3px var(--primary-color);
+    box-shadow: inset 0 0 0 2px var(--primary-color);
+    background-color: var(--listItem-active);
 }
 
 .noData {
@@ -390,6 +399,7 @@
 .modal-dialog {
     width: 40%;
     background-color: white;
+    box-shadow: 0 0 20px 1px var(--theme-black);
     border-radius: 5px;
     overflow-y: initial;
 }
@@ -426,7 +436,6 @@
     background: var(--theme-white);
     border-radius: 5px;
     padding: 1.5em 2em;
-    box-shadow: 0 0 20px 1px var(--theme-black);
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     overflow-y: auto;
