Last fixes - Change selected item bgColor - Fix filter dropdown to accept case insensitive search - Fix no active navmenu class on / path

--- a/Content/css/suggestions.css
+++ b/Content/css/suggestions.css
@@ -189,7 +189,7 @@
 
 .listItem-selected {
     box-shadow: inset 0 0 0 2px var(--primary-color);
-    background-color: var(--listItem-active);
+    background-color: var(--actionMenu-color);
 }
 
 .noData {
