--- a/Site.Master
+++ b/Site.Master
@@ -138,6 +138,8 @@
     <script src="Content/js/master.js"></script>
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <!-- Grammarly -->
+    <script src="https://unpkg.com/@grammarly/editor-sdk?clientId=client_MhbupHm3qCzLiNb79Jbdi7"></script>
 
     <!-- ContentPlaceHolder for individual page JS -->
     <asp:ContentPlaceHolder ID="PageJavaScript" runat="server">
