--- a/Content/css/translator.css
+++ b/Content/css/translator.css
@@ -238,8 +238,9 @@
 
 .modal-item-title {
     color: var(--primary-color);
-    font-size: 18px;
-    font-family: 'Mitr', Arial, sans-serif;
+    font-size: 16px;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-weight: 500;
 }
 
 .text-title {
@@ -253,6 +254,7 @@
     color: var(--primary-color);
     font-family: 'Rubik', Arial, sans-serif;
     font-size: 14px;
+    font-weight: 400;
 }
 
 .modal-item-content small {
@@ -336,12 +338,18 @@
     word-spacing: 0.2rem;
 }
 
+.modal-footer-controls {
+    display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
+}
+
 /* Saved Translations / Translation History */
 #divSavedTranslationsModalFooter, #divTranslationHistoryModalFooter {
     justify-content: space-between;
 }
 
-#lnkDownloadSavedTranslations, #lnkDownloadTranslationHistory {
+#lnkDownloadSavedTranslations, #lnkDownloadTranslationHistory, #lnkClearTranslationHistory {
     display: none;
 }
 
@@ -374,7 +382,6 @@
   flex-direction: column;
   margin: auto;
   width: 85%;
-  height: 90vh;
 }
 
 .banner .banner-container {
@@ -564,13 +571,38 @@
     color: var(--primary-color-active);
 }
 
-.translate .translate-output .output {
+.translate .translate-output .output-container {
     position: relative;
     width: 100%;
-    height: 18vh;
+    height: 20vh;
     margin-top: 5px;
     padding: 1rem 3rem;
     font-size: 18px;
+}
+
+.output-text {
+    padding-right: 1rem;
+    overflow: auto;
+    height: 100%;
+}
+
+.output-text::-webkit-scrollbar {
+    width: 6px;
+    background-color: #e2e2e2;
+}
+
+.output-text::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+}
+.output-text::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-color-hover);
+}
+.output-text::-webkit-scrollbar-thumb:active {
+    background-color: var(--primary-color-active);
+}
+
+.output-text::-webkit-scrollbar-button {
+    display: none;
 }
 
 #startQuote, #endQuote {
@@ -589,7 +621,7 @@
     right: 0;
 }
 
-.output p {
+.output-container p {
     font-weight: 600;
     color: #323232;
     text-align: justify;
