Completed send reports function

--- a/Content/css/dictionary.css
+++ b/Content/css/dictionary.css
@@ -119,6 +119,7 @@ body {
     border-radius: 6px;
     box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.4) !important;
     transition: opacity 0.1s linear;
+    z-index: 10000;
 }
 
 
@@ -434,7 +435,6 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.4);
     overflow-y: initial;
-    animation: slideIn .3s ease-out forwards;
 }
 
 .modal-content {
@@ -600,7 +600,7 @@ body {
     outline: none;
 }
 
-.modal-textinput {
+.modal-textinput, .aspNetDisabled {
     padding: 0.5rem 1rem;
     resize: none;
     border: 2px solid var(--primary-color);
@@ -624,7 +624,7 @@ body {
 /* Report Modal */
 #dlgReport {
     width: 40%;
-    height: 70%;
+    height: 80%;
 }
 
 #divReportModalBody {
@@ -636,6 +636,36 @@ body {
 #ddlReportCategory {
     width: 60%;
 }
+
+#divReportModalBody > div {
+    margin-bottom: 1em;
+}
+
+    #divReportModalBody > div:last-child {
+        margin-bottom: 0;
+    }
+
+.mdlReport-topInputRow {
+    display: flex;
+    align-items: center;
+}
+
+    .mdlReport-topInputRow > div {
+        flex: 0.5;
+    }
+
+        .mdlReport-topInputRow > div:first-child {
+            margin-right: 2em;
+        }
+
+    .mdlReport-topInputRow select {
+        width: 100%;
+        transition: all .3s ease-out;
+    }
+
+        .mdlReport-topInputRow select:disabled {
+            border: 2px solid var(--theme-gray-dark);
+        }
 
 /* Suggestion Modal */
 #dlgSuggestion {
