--- a/Content/css/master.css
+++ b/Content/css/master.css
@@ -8,6 +8,7 @@
     --secondary-color-yellow: #FFF96D;
     --notification-error: #d35555;
     --notification-success: #5aad7f;
+    --theme-gray-dark: #9F9F9F;
 }
 
 html {
