--- a/Content/css/reports.css
+++ b/Content/css/reports.css
@@ -88,14 +88,19 @@
 
 .filterContainer {
     display: flex;
-    flex-direction: column;
-    flex: 0.2;
-    margin-right: 2em;
+    flex: 0.3;
 }
+
+    .filterContainer div {
+        flex: 0.5;
+        display: flex;
+        flex-direction: column;
+        margin-right: 2em;
+    }
 
 .searchGroup {
     display: flex;
-    flex: 0.7;
+    flex: 0.6;
     align-items: flex-end;
 }
 
